# raytracing

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format-check.yml
include/: camera.hpp  colour.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vec3.hpp
mains/: main.cxx
src/: camera.cxx  hittable.cxx  hittable_list.cxx  interval.cxx  main.cxx  material.cxx  ray.cxx  sphere.cxx  vec3.cxx
tests/: test_all_builds.sh
